fix header issue (loading too fast, navBar not fit to width)

--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -78,7 +78,7 @@
     bottom: 2px;
     transition: .4s ease;
     height: 3px;
-    width: 50px;
+    width: 0px;
     z-index: 1;
     background-color: white;
 }
